# sorting_strings

./: .gitignore  CMakeLists.txt  README.md  doxygen.txt  onegin.txt  result.txt  source.txt
docs/html/: _c_make_files_23_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _c_make_files_23_818_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_818_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  classes.html  cmake-build-debug_2_c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  cmake-build-debug_2_c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  dir_000005_000004.html  dir_000012_000011.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_0e2fcc014276805deef6b3bb78971894.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_41f00cc4546591484c0a52c6b418b42a.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  feature__tests_8c.html  (+62 more)
results/: original.txt  sortedLeftToRight.txt  sortedRightToLeft.txt
sources/: onegin.txt  source.txt
src/: help_lib.c  help_lib.h  main.c  sort_lib.c  sort_lib.h  source.txt
test/: test_03.txt  tests.c
tests/: test3_1251.txt  test4_1251.txt  test_02.txt  tests.c  tests.h
(+33 files in other folders)
